pkg/provider/kubernetes/ingress/fixtures/Ingress-with-dns.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: "*.foobar.com"
    http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing
  annotations:
    traefik.ingress.kubernetes.io/service.usednsname: "true"

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: Endpoints
apiVersion: v1
metadata:
  name: service1
  namespace: testing

subsets:
  - addresses:
      - ip: 10.10.0.1
    ports:
      - port: 8080
